[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = "4.4.18"
clap_complete = "4.4.9"
colored = "2.1.0"
env_logger = "0.11.0"
lazy_static = "1.4.0"
num-format = "0.4.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
nightly = []
